--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ dnspython==2.3.0
 exceptiongroup==1.1.1
 executing==1.2.0
 fastapi==0.95.0
+GeoAlchemy2==0.13.1
 grpcio==1.53.0
 grpcio-tools==1.53.0
 h11==0.14.0
@@ -24,12 +25,13 @@ hyperframe==6.0.1
 idna==3.4
 importlib-metadata==6.1.0
 iniconfig==2.0.0
+install==1.3.5
 ipykernel==6.22.0
 ipython==8.12.0
 jedi==0.18.2
 joblib==1.2.0
-jupyter_client==8.1.0
-jupyter_core==5.3.0
+jupyter-client==8.1.0
+jupyter-core==5.3.0
 matplotlib-inline==0.1.6
 motor==3.1.1
 mypy-extensions==1.0.0
@@ -39,6 +41,7 @@ packaging==23.0
 parso==0.8.3
 pathspec==0.11.1
 pexpect==4.8.0
+pi==0.1.2
 pickleshare==0.7.5
 platformdirs==3.2.0
 pluggy==1.0.0
@@ -60,12 +63,13 @@ requests==2.28.2
 rfc3986==1.5.0
 six==1.16.0
 sniffio==1.3.0
+SQLAlchemy==2.0.8
 stack-data==0.6.2
 starlette==0.26.1
 tomli==2.0.1
 tornado==6.2
 traitlets==5.9.0
-typing_extensions==4.5.0
+typing-extensions==4.5.0
 urllib3==1.26.15
 wcwidth==0.2.6
 zipp==3.15.0
