--- a/.env
+++ b/.env
@@ -6,7 +6,7 @@ API_VERSION="1.0.0"
 API_DEBUG_MODE=True
 
 
-DEV_SQL_STRING=""
-PROD_SQL_STRING=""
+DEV_SQL_STRING="postgresql://postgres:password@vps.andrejvysny.sk/postgres"
+PROD_SQL_STRING="postgresql://postgres:password@vps.andrejvysny.sk/postgres"
 #
 LOG_CONFIG_FILENAME="logging_config.yaml"
