--- a/requirements.txt
+++ b/requirements.txt
@@ -38,6 +38,7 @@ mypy-extensions==1.0.0
 nest-asyncio==1.5.6
 numpy==1.24.2
 packaging==23.0
+pandas==1.5.3
 parso==0.8.3
 pathspec==0.11.1
 pexpect==4.8.0
@@ -48,6 +49,7 @@ pluggy==1.0.0
 prompt-toolkit==3.0.38
 protobuf==4.22.1
 psutil==5.9.4
+psycopg2==2.9.5
 ptyprocess==0.7.0
 pure-eval==0.2.2
 pydantic==1.10.7
@@ -57,6 +59,8 @@ pytest==7.2.2
 pytest-asyncio==0.21.0
 python-dateutil==2.8.2
 python-dotenv==0.21.0
+pytz==2023.3
+PyYAML==6.0
 pyzmq==25.0.2
 qdrant-client==1.1.1
 requests==2.28.2
